<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.hedera</groupId>
	<artifactId>MirrorNode</artifactId>
	<version>0.1-SNAPSHOT</version>
	<name>Hedera Mirror Node</name>
	<description>Hedera Mirror Node mirrors data from Hedera nodes and serves it via an API</description>
	<ciManagement>
		<system>CircleCI</system>
		<url>https://circleci.com/gh/hashgraph/hedera-mirror-node</url>
	</ciManagement>
	<inceptionYear>2019</inceptionYear>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/hashgraph/hedera-mirror-node/issues</url>
	</issueManagement>
	<licenses>
		<license>
			<name>Apache License 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>Hedera Hashgraph, LLC</name>
		<url>https://hedera.com</url>
	</organization>
	<packaging>jar</packaging>
	<scm>
		<connection>https://github.com/hashgraph/hedera-mirror-node.git</connection>
		<tag>master</tag>
		<url>https://github.com/hashgraph/hedera-mirror-node/tree/master</url>
	</scm>
	<url>https://github.com/hashgraph/hedera-mirror-node</url>

	<properties>
		<flyway.version>5.2.4</flyway.version>
		<hedera.protobuf.version>0.3.3</hedera.protobuf.version>
		<hedera.sdk.version>0.5.0</hedera.sdk.version>
		<junit.jupiter.version>5.5.1</junit.jupiter.version>
		<junit.jupiter.platform.version>1.5.1</junit.jupiter.platform.version>
		<log4j-version>2.8.2</log4j-version>
		<perf4j-version>0.9.16</perf4j-version>
		<grpc.version>1.11.0</grpc.version>
		<os.plugin.version>1.5.0.Final</os.plugin.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<protobuf.plugin.version>0.5.0</protobuf.plugin.version>
		<protoc.version>3.5.1</protoc.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.github.cdimascio</groupId>
			<artifactId>java-dotenv</artifactId>
			<version>5.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.6</version>
		</dependency>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>3.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
			<version>${flyway.version}</version>
		</dependency>
		<dependency>
			<groupId>org.flywaydb.flyway-test-extensions</groupId>
			<artifactId>flyway-spring-test</artifactId>
			<version>5.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.8</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j-version}</version>
			<type>pom</type>
		</dependency>

		<dependency>
			<groupId>com.hedera.hashgraph</groupId>
			<artifactId>hedera-protobuf-java-api</artifactId>
			<version>${hedera.protobuf.version}</version>
		</dependency>

		<dependency>
			<groupId>com.hedera.hashgraph</groupId>
			<artifactId>sdk</artifactId>
			<version>${hedera.sdk.version}</version>
			<exclusions>
				<exclusion>
					<groupId>io.grpc</groupId>
					<artifactId>grpc-netty-shaded</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.11.0</version>
		</dependency>

		<dependency>
			<groupId>org.perf4j</groupId>
			<artifactId>perf4j</artifactId>
			<version>${perf4j-version}</version>
		</dependency>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.11</version>
		</dependency>

		<dependency>
			<groupId>net.i2p.crypto</groupId>
			<artifactId>eddsa</artifactId>
			<version>0.3.0</version>
		</dependency>

		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.9</version>
		</dependency>

		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk-s3</artifactId>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-runner</artifactId>
			<version>${junit.jupiter.platform.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>2.28.2</version>
			<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>RELEASE</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>20.0</version>
			</dependency>
			<dependency>
				<groupId>io.netty</groupId>
				<artifactId>netty-all</artifactId>
				<version>4.1.25.Final</version>
			</dependency>
			<dependency>
				<groupId>com.amazonaws</groupId>
				<artifactId>aws-java-sdk-bom</artifactId>
				<version>1.11.327</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>10</release>
					<source>10</source>
					<target>10</target>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.ow2.asm</groupId>
						<artifactId>asm</artifactId>
						<version>6.2</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<finalName>mirrorNode</finalName>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<useUniqueVersions>false</useUniqueVersions>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>3.4.0.905</version>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/config/</outputDirectory>
							<resources>
								<resource>
									<directory>config</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.flywaydb</groupId>
				<artifactId>flyway-maven-plugin</artifactId>
				<version>5.2.4</version>
				<executions>
					<execution>
						<id>flyway-clean</id>
						<phase>pre-clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
					<execution>
						<id>flyway-migrate</id>
						<phase>deploy</phase>
						<goals>
							<goal>migrate</goal>
						</goals>
					</execution>
				</executions>

				<configuration>
					<url>jdbc:postgresql://localhost:5432/hedera_mirror_node__performance_test</url>
					<user>hedera_mirror_node__performance_test</user>
					<password>hedera_mirror_node__performance_test</password>
					<placeholders>
						<db-name>hedera_mirror_node__performance_test</db-name>
						<db-user>hedera_mirror_node__performance_test</db-user>
						<db-password>hedera_mirror_node__performance_test</db-password>
						<api-user>hedera_mirror_node_api__performance_test</api-user>
						<api-password>hedera_mirror_node_api__performance_test</api-password>
					</placeholders>
					<schemas>
						<schema>public</schema>
					</schemas>

				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>2.0.0</version>
				<configuration>
					<canUpdateCopyright>true</canUpdateCopyright>
					<includes>
						<include>**/*.java</include>
						<include>**/*.js</include>
					</includes>
					<licenseName>apache_v2</licenseName>
					<roots>
						<root>src/main/java</root>
						<root>src/test/java</root>
						<root>rest-api</root>
					</roots>
					<!-- These contain unprintable characters to suppress showing the delimiters -->
					<processEndTag>‍</processEndTag>
					<processStartTag>‌</processStartTag>
					<sectionDelimiter>​</sectionDelimiter>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>integration</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>3.0.0-M3</version>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
